partial clean-link-match-streams && add cr-link-update